--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="{PATH}/alertify.min.js"></script>
+    <!-- include the style -->
+<link rel="stylesheet" href="{PATH}/css/alertify.min.css" />
+<!-- include a theme -->
+<link rel="stylesheet" href="{PATH}/css/themes/default.min.css" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -39,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
